src/eclipse-workspace/Sample/src/csd/App.java
/*----------------------------------------------------------------------------------------------------------------------	
	Aşağıdaki örnekte uygun abs metodu bulunmadığından error oluşur
----------------------------------------------------------------------------------------------------------------------*/
package csd;

class App {
	public static void main(String[] args)
	{
		boolean a = true;
		
		Math.abs(a); //error
	}
}

